CMAKE_MINIMUM_REQUIRED(VERSION 3.24)

PROJECT(NetworkTest)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules" "$ENV{HOME}/cmake/Modules")

MESSAGE(STATUS "Host system: ${CMAKE_HOST_SYSTEM}")
MESSAGE(STATUS "Host system name: ${CMAKE_HOST_SYSTEM_NAME}")
MESSAGE(STATUS "Host system processor: ${CMAKE_HOST_SYSTEM_PROCESSOR}")
MESSAGE(STATUS "Host system version: ${CMAKE_HOST_SYSTEM_VERSION}")

MESSAGE(STATUS "Build system: ${CMAKE_SYSTEM}")
MESSAGE(STATUS "Build system name: ${CMAKE_SYSTEM_NAME}")
MESSAGE(STATUS "Build system processor: ${CMAKE_SYSTEM_PROCESSOR}")
MESSAGE(STATUS "Build system version: ${CMAKE_SYSTEM_VERSION}")

OPTION(FORMACOS "on for MacOS" On)

IF (FORMACOS)
    MESSAGE(STATUS "    ---------->> MacOS Platform")
    ADD_DEFINITIONS(-DMACOS)
    SET(LIB_PLATFORM MacOS)
ENDIF (FORMACOS)

MESSAGE(STATUS "Checking option ...")
MESSAGE(STATUS "    ---------->> Lib platform: ${LIB_PLATFORM}")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/src)
